--- a/requirements.txt
+++ b/requirements.txt
@@ -6,17 +6,31 @@
 #
 asgiref==3.8.1
     # via django
+attrs==24.2.0
+    # via
+    #   jsonschema
+    #   referencing
 django==5.1.4
     # via
     #   -r requirements.in
     #   djangorestframework
     #   djangorestframework-simplejwt
+    #   drf-spectacular
 djangorestframework==3.15.2
     # via
     #   -r requirements.in
     #   djangorestframework-simplejwt
+    #   drf-spectacular
 djangorestframework-simplejwt==5.3.1
     # via -r requirements.in
+drf-spectacular==0.28.0
+    # via -r requirements.in
+inflection==0.5.1
+    # via drf-spectacular
+jsonschema==4.23.0
+    # via drf-spectacular
+jsonschema-specifications==2024.10.1
+    # via jsonschema
 psycopg[binary]==3.2.3
     # via -r requirements.in
 psycopg-binary==3.2.3
@@ -25,6 +39,16 @@ pyjwt==2.10.1
     # via djangorestframework-simplejwt
 python-dotenv==1.0.1
     # via -r requirements.in
+pyyaml==6.0.2
+    # via drf-spectacular
+referencing==0.35.1
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+rpds-py==0.22.3
+    # via
+    #   jsonschema
+    #   referencing
 sqlparse==0.5.3
     # via django
 typing-extensions==4.12.2
@@ -33,3 +57,5 @@ tzdata==2024.2
     # via
     #   django
     #   psycopg
+uritemplate==4.1.1
+    # via drf-spectacular
