--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,16 @@ attrs==24.2.0
     # via
     #   jsonschema
     #   referencing
+click==8.1.7
+    # via uvicorn
+colorama==0.4.6
+    # via click
+dj-database-url==2.3.0
+    # via -r requirements.in
 django==5.1.4
     # via
     #   -r requirements.in
+    #   dj-database-url
     #   djangorestframework
     #   djangorestframework-simplejwt
     #   drf-spectacular
@@ -25,12 +32,18 @@ djangorestframework-simplejwt==5.3.1
     # via -r requirements.in
 drf-spectacular==0.28.0
     # via -r requirements.in
+gunicorn==23.0.0
+    # via -r requirements.in
+h11==0.14.0
+    # via uvicorn
 inflection==0.5.1
     # via drf-spectacular
 jsonschema==4.23.0
     # via drf-spectacular
 jsonschema-specifications==2024.10.1
     # via jsonschema
+packaging==24.2
+    # via gunicorn
 psycopg[binary]==3.2.3
     # via -r requirements.in
 psycopg-binary==3.2.3
@@ -52,10 +65,14 @@ rpds-py==0.22.3
 sqlparse==0.5.3
     # via django
 typing-extensions==4.12.2
-    # via psycopg
+    # via
+    #   dj-database-url
+    #   psycopg
 tzdata==2024.2
     # via
     #   django
     #   psycopg
 uritemplate==4.1.1
     # via drf-spectacular
+uvicorn==0.34.0
+    # via -r requirements.in
