--- a/digitalvocabulary/render.yaml
+++ b/digitalvocabulary/render.yaml
@@ -10,3 +10,21 @@ databases:
     description: everywhere
   postgresMajorVersion: "16"
 version: "1"
+
+
+services:
+  - type: web
+    plan: free
+    name: django-projects
+    runtime: python
+    buildCommand: "./build.sh"
+    startCommand: "python -m gunicorn digitalvocabulary.asgi:application -k uvicorn.workers.UvicornWorker"
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: django-projects
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
+      - key: WEB_CONCURRENCY
+        value: 4
