--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
     sync: false
   - key: DATABASE_URL
     sync: false
-  region: oregon
+  region: frankfurt
   buildCommand: ./build.sh
-  startCommand: python -m gunicorn digitalvocabulary.asgi:application -k uvicorn.workers.UvicornWorker
+  startCommand: uvicorn digitalvocabulary.asgi:application --host 127.0.0.1 --port 8000 --reload
 version: "1"
